set up authentication for admin and user